--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <button id="add">ADD</button>
-    <span class="counter">0</span>
-    <button id="minus">MINUS</button>
-
+    <h1>To Dos</h1>
+    <form>
+      <input type="text" placeholder="Write to do" />
+      <button>Add</button>
+    </form>
+    <ul></ul>
   </body>
 </html>
