--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Vanilla Redux</title>
+    <title>React Redux</title>
   </head>
   <body>
-    <h1>To Dos</h1>
-    <form>
-      <input type="text" placeholder="Write to do" />
-      <button>Add</button>
-    </form>
-    <ul></ul>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
